--- a/Function/create_project_dummy_data.ipynb
+++ b/Function/create_project_dummy_data.ipynb
@@ -277,6 +277,94 @@
     "with open('generated_project_dummy_data.json', 'w') as json_file:\n",
     "    json.dump(dummy_projects, json_file, ensure_ascii=False, indent=4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data has been updated and saved to 'updated_data.json'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import random\n",
+    "\n",
+    "# Load the existing JSON data from a file\n",
+    "with open('/Users/izzymohamed/Desktop/egypt-horizon-scanner.project_data.json', 'r', encoding='utf-8') as file:\n",
+    "    existing_data = json.load(file)\n",
+    "\n",
+    "# Define the new examples for KPIs, M&E Data, CDP Focus Areas, SDG Reporting, and Priorities Set by UNDP Office\n",
+    "kpis = [\n",
+    "    \"Increased crop yield\", \"Reduction in poverty rates\", \"Improved literacy rates\",\n",
+    "    \"Reduction in maternal mortality\", \"Increased access to clean water\", \"Increased renewable energy usage\",\n",
+    "    \"Reduced greenhouse gas emissions\", \"Increased economic participation for women\", \"Improved access to healthcare\",\n",
+    "    \"Reduced youth unemployment\", \"Enhanced local infrastructure\", \"Increased forest coverage\", \n",
+    "    \"Reduced waste generation\", \"Increased public transportation usage\", \"Enhanced digital literacy\", \n",
+    "    \"Increased number of SMEs\", \"Enhanced disaster preparedness\", \"Improved water quality\", \n",
+    "    \"Increased affordable housing units\", \"Reduced food insecurity\"\n",
+    "]\n",
+    "\n",
+    "me_data = [\n",
+    "    \"Baseline and endline surveys\", \"Quarterly reports\", \"Monthly health surveys\", \"Field assessments and focus group discussions\",\n",
+    "    \"Annual impact assessments\", \"Beneficiary feedback mechanisms\", \"Project completion reports\", \"Mid-term evaluations\",\n",
+    "    \"Community feedback sessions\", \"Monitoring dashboards with live data\", \"Beneficiary tracking surveys\", \n",
+    "    \"GIS (Geographical Information Systems) mapping\", \"Cost-benefit analysis reports\", \"Key informant interviews\",\n",
+    "    \"Stakeholder engagement reports\", \"Demographic data analysis\", \"Gender-sensitive evaluations\", \"Case studies and stories of change\",\n",
+    "    \"Budget utilization tracking\", \"Climate resilience metrics\"\n",
+    "]\n",
+    "\n",
+    "cdp_focus_areas = [\n",
+    "    \"Food security and rural development\", \"Health services and community outreach\", \"Education access and quality\",\n",
+    "    \"Climate change adaptation\", \"Renewable energy and sustainability\", \"Economic diversification\", \"Infrastructure development\",\n",
+    "    \"Gender equality and women's empowerment\", \"Local governance and decentralization\", \"Access to justice and human rights\", \n",
+    "    \"Youth empowerment and employment\", \"Biodiversity conservation\", \"Urban planning and smart cities\", \"Technology and innovation\",\n",
+    "    \"Disaster risk reduction\", \"Small business and entrepreneurship support\", \"Water and sanitation\", \"Social protection systems\",\n",
+    "    \"Tourism development\", \"Cultural heritage preservation\"\n",
+    "]\n",
+    "\n",
+    "sdg_reporting = [\n",
+    "    \"SDG 1 - No Poverty\", \"SDG 2 - Zero Hunger\", \"SDG 3 - Good Health and Well-being\", \"SDG 4 - Quality Education\", \n",
+    "    \"SDG 5 - Gender Equality\", \"SDG 6 - Clean Water and Sanitation\", \"SDG 7 - Affordable and Clean Energy\", \n",
+    "    \"SDG 8 - Decent Work and Economic Growth\", \"SDG 9 - Industry, Innovation, and Infrastructure\", \"SDG 10 - Reduced Inequality\",\n",
+    "    \"SDG 11 - Sustainable Cities and Communities\", \"SDG 12 - Responsible Consumption and Production\", \"SDG 13 - Climate Action\", \n",
+    "    \"SDG 14 - Life Below Water\", \"SDG 15 - Life on Land\", \"SDG 16 - Peace, Justice, and Strong Institutions\", \n",
+    "    \"SDG 17 - Partnerships for the Goals\"\n",
+    "]\n",
+    "\n",
+    "undp_priorities = [\n",
+    "    \"Sustainability and environmental protection\", \"Innovation in development processes\", \"Resilience building in vulnerable communities\", \n",
+    "    \"Access to quality education\", \"Energy transition and green economy\", \"Community health improvement\", \n",
+    "    \"Promotion of human rights and rule of law\", \"Women's empowerment and leadership\", \"Urbanization and smart city solutions\", \n",
+    "    \"Youth participation and leadership\", \"Water conservation and management\", \"Reducing economic inequalities\", \n",
+    "    \"Conflict prevention and peacebuilding\", \"Digital transformation and technology adoption\", \"Support for marginalized groups\", \n",
+    "    \"Emergency response and preparedness\", \"Strengthening local governance\", \"Promotion of sustainable tourism\", \n",
+    "    \"Enhancing agricultural productivity\", \"Strengthening public-private partnerships\"\n",
+    "]\n",
+    "\n",
+    "# Function to add random new values to each project\n",
+    "def add_new_data(project):\n",
+    "    project[\"projectKPIS\"] = random.sample(kpis, 5)  # Random 5 KPIs\n",
+    "    project[\"projectMAndEData\"] = random.sample(me_data, 5)  # Random 5 M&E data\n",
+    "    project[\"projectCDPFocusAreas\"] = random.sample(cdp_focus_areas, 5)  # Random 5 CDP Focus Areas\n",
+    "    project[\"projectSDGReporting\"] = random.sample(sdg_reporting, 5)  # Random 5 SDGs\n",
+    "    project[\"projectPrioritiesSetByUNDPOffice\"] = random.sample(undp_priorities, 5)  # Random 5 Priorities\n",
+    "    return project\n",
+    "\n",
+    "# Add new data to all projects in the existing data\n",
+    "updated_data = [add_new_data(project) for project in existing_data]\n",
+    "\n",
+    "# Save the updated data to a new JSON file\n",
+    "with open('/Users/izzymohamed/Desktop/update.egypt-horizon-scanner.project_data.json', 'w', encoding='utf-8') as file:\n",
+    "    json.dump(updated_data, file, ensure_ascii=False, indent=4)\n",
+    "\n",
+    "print(\"Data has been updated and saved to 'updated_data.json'\")"
+   ]
   }
  ],
  "metadata": {
